--- a/public/airdroplist.html
+++ b/public/airdroplist.html
@@ -3,16 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NDocs</title>
+  <title>NDocs | Airdrop List</title>
   <link rel="shortcut icon" href="https://ugc.production.linktr.ee/9250b48c-ee52-4bdb-af03-b157be4e8c33_image.jpeg?io=true&size=avatar-v3_0" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
-  <script>
-    function toggleMenu() {
-      var menu = document.getElementById('mobile-menu');
-      menu.classList.toggle('hidden');
-    }
-  </script>
 </head>
 <body class="bg-gray-900 text-white">
   <!-- Mobile menu button -->
@@ -34,10 +28,10 @@
         <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Overview</a>
       </li>
       <li class="mb-1">
-        <a href="index.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Intro</a>
+        <a href="./" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Intro</a>
       </li>
       <li class="mb-1">
-        <a href="contact.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700 ">Contact</a>
+        <a href="contact" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700 ">Contact</a>
       </li>
       <li class="mb-1">
         <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
@@ -51,7 +45,7 @@
         <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">What Airdrop</a>
       </li>
       <li class="mb-1">
-        <a href="airdroplist.html" class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Airdrop List</a>
+        <a class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Airdrop List</a>
       </li>
       <li class="mb-1">
         <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Results</a>
@@ -65,7 +59,7 @@
         <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Faucet</a>
       </li>
       <li class="mb-1">
-        <a href="faucet.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
+        <a href="faucet" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
       </li>
       <li class="mb-1">
         <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">RPC</a>
@@ -79,10 +73,10 @@
         <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Gas Tracker</a>
       </li>
       <li class="mb-1">
-        <a href="gastracker.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
+        <a href="gastracker" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
       </li>
       <li class="mb-1">
-        <a href="fear-and-greed-index.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
+        <a href="fear-and-greed-index" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
       </li>
     </ul>
 
@@ -99,10 +93,10 @@
             <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Overview</a>
           </li>
           <li class="mb-1">
-            <a href="index.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Intro</a>
+            <a href="./" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Intro</a>
           </li>
           <li class="mb-1">
-            <a href="contact.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700 ">Contact</a>
+            <a href="contact" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700 ">Contact</a>
           </li>
           <li class="mb-1">
             <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
@@ -116,7 +110,7 @@
             <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">What Airdrop</a>
           </li>
           <li class="mb-1">
-            <a href="airdroplist.html" class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Airdrop List</a>
+            <a class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Airdrop List</a>
           </li>
           <li class="mb-1">
             <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Results</a>
@@ -130,7 +124,7 @@
             <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Faucet</a>
           </li>
           <li class="mb-1">
-            <a href="faucet.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
+            <a href="faucet" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
           </li>
           <li class="mb-1">
             <a  class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">RPC</a>
@@ -144,10 +138,10 @@
             <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Gas Tracker</a>
           </li>
           <li class="mb-1">
-            <a href="gastracker.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
+            <a href="gastracker" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
           </li>
           <li class="mb-1">
-            <a href="fear-and-greed-index.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
+            <a href="fear-and-greed-index" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
           </li>
         </ul>
       </div>
@@ -179,5 +173,6 @@
           </div>
     </main>
   </div>
+  <script src="js/mobile-menu.js"></script>
 </body>
 </html>
