update: dropdown airdrop-list

--- a/public/airdroplist.html
+++ b/public/airdroplist.html
@@ -151,37 +151,37 @@
         <h2 class="text-3xl font-bold mr-2">Airdrop List</h2>
         <div class="hs-dropdown relative inline-flex">
             <button id="hs-dropdown-default" type="button" class="text-left text-2xl font-bold hs-dropdown-toggle py-2 px-4 inline-flex items-center pl-1" aria-haspopup="menu" aria-expanded="false" aria-label="Dropdown">
-                <svg class="hs-dropdown-open:rotate-180" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <svg id="dropdown-arrow" class="transition-transform duration-300" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="m6 9 6 6 6-6"/>
                 </svg>
             </button>
-            <div class="hs-dropdown-menu transition-[opacity,margin] duration hs-dropdown-open:opacity-100 opacity-0 hidden min-w-60 bg-white shadow-md rounded-lg p-2 mt-1 absolute left-0 top-full" role="menu" aria-orientation="vertical" aria-labelledby="hs-dropdown-default">
+            <div class=" w-44 hs-dropdown-menu transition-[opacity,margin] duration hs-dropdown-open:opacity-100 opacity-0 hidden min-w-60 bg-white shadow-md p-2 rounded-lg mt-1 absolute left-0 top-full" role="menu" aria-orientation="vertical" aria-labelledby="hs-dropdown-default">
               <div class="max-h-48 overflow-y-auto">
-                <a class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700" href="#">
+                <a class="flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-blue-100" href="#">
                     Dwan
                 </a>
-                <a class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700" href="#">
+                <a class="flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#">
                     Alliance
                 </a>
-                <a class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700" href="#">
+                <a class="flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#">
                   Particle
                 </a>
-                <a class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700" href="#">
+                <a class="flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#">
                   CertiK
                 </a>
-                <a class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700" href="#">
+                <a class="flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#">
                   DFlow
                 </a>
-                <a class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700" href="#">
+                <a class="flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#">
                   Solv
                 </a>
-                <a class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700" href="#">
+                <a class="flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#">
                   Allora
                 </a>
-                <a class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700" href="#">
+                <a class="flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#">
                   Tari
                 </a>
-                <a class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700" href="#">
+                <a class="flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#">
                   Owlto
                 </a>
             </div>
