--- a/public/airdroplist.html
+++ b/public/airdroplist.html
@@ -156,7 +156,7 @@
                 </svg>
             </button>
             <div class=" w-44 hs-dropdown-menu transition-[opacity,margin] duration hs-dropdown-open:opacity-100 opacity-0 hidden min-w-60 bg-white shadow-md p-2 rounded-lg mt-1 absolute left-0 top-full" role="menu" aria-orientation="vertical" aria-labelledby="hs-dropdown-default">
-              <div class="max-h-48 overflow-y-auto">
+              <div class="max-h-48 overflow-y-auto scrollbar-thin">
                 <a class="flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-blue-100" href="#">
                     Dwan
                 </a>
@@ -213,6 +213,27 @@
             </ol>
           </p>
           </div>
+
+          <div class="mt-24">
+            <h2 id="sepolia" class="mb-4 text-2xl font-bold">Andrena (DAWN)</h2>
+          </div>
+          <img src="https://pbs.twimg.com/media/GUYLM1TbAAAunwF?format=jpg&name=large" alt="" class="mb-4 w-full md:w-1/2 ">
+          <p class="mb-4 max-w-3xl">DAWN aims to transform internet access similarly to how solar panels transformed electricity, enabling consumers to own, generate, and sell their own internet service. Now DAWN has launched a testnet, where we can use the Internet in normal mode and get points for it. Grass and Nodepay have a similar activity.</p>
+          <p class="mb-4 max-w-3xl font-bold">DAWN Guide</p>
+          <p class="mb-4 max-w-3xl">
+              <ol class="list-decimal pl-4">
+                <li class="mb-2">Install the Dawn 
+                  <a href="https://chromewebstore.google.com/detail/dawn-validator-chrome-ext/fpdkjdnhkakefebpekbdhillbhonfjjp" target="_blank" class="text-blue-500 hover:underline">extension</a>.</a>
+                </li>
+                <li class="mb-2 max-w-3xl">Click the Register button in the extension and enter the code <b>hzyzqj</b> <br> (you won't be able to log into the app without it):</li>
+                <img src="img/dawn1.png" alt="" class="mb-4 w-full md:w-1/2 ">
+                <li class="mb-2 max-w-3xl">Confirm your registration at the mail.</li>
+                <li class="mb-2 max-w-3xl">Open the extension again and log in to your account. If everything was successful, you will see a similar window:</li>
+                <img src="img/dawn2.png" alt="" class="mb-4 w-72 ">
+                <p class="mb-4 max-w-3xl">For more rewards, click Boost rewards. Here you can invite friends and complete tasks.</p>
+              </ol>
+            </p>
+            </div>
     </main>
   </div>
   <script src="js/mobile-menu.js"></script>
