--- a/public/gastracker.html
+++ b/public/gastracker.html
@@ -159,7 +159,7 @@
       <h1 id="timer" class="text-center mt-10 text-blue-600"></h1>
       <div class=" mb-40 mt-2 flex flex-col sm:flex-row justify-center items-center ">
         <div class="max-w-xs rounded overflow-hidden shadow-lg mx-4 my-4 bg-white">
-          <img class="" src="img/low.jpg" alt="" />
+          <img class="" src="img/gastracker/low.jpg" alt="" />
           <div class="px-6 py-4">
             <h1 class="font-bold text-xl mb-2 text-green-600 text-center">
               Low
@@ -171,7 +171,7 @@
           </div>
         </div>
         <div class="max-w-xs rounded overflow-hidden shadow-lg mx-4 my-4 bg-white">
-            <img class="" src="img/average.png" alt="" />
+            <img class="" src="img/gastracker/average.png" alt="" />
             <div class="px-6 py-4">
               <h1 class="font-bold text-xl mb-2 text-yellow-600 text-center">
                 Average
@@ -183,7 +183,7 @@
             </div>
           </div>
         <div class="max-w-xs rounded overflow-hidden shadow-lg mx-4 my-4 bg-white">
-          <img class="" src="img/high.png" alt="" />
+          <img class="" src="img/gastracker/high.png" alt="" />
           <div class="px-6 py-4">
             <h1 class="font-bold text-xl mb-2 text-red-600 text-center">
               High
