update: dropdown add dropdownItems

--- a/public/faucet.html
+++ b/public/faucet.html
@@ -157,31 +157,31 @@
             </button>
             <div class=" w-40 hs-dropdown-menu transition-[opacity,margin] duration hs-dropdown-open:opacity-100 opacity-0 hidden min-w-60 bg-white shadow-md p-2 rounded-lg mt-1 absolute left-0 top-full" role="menu" aria-orientation="vertical" aria-labelledby="hs-dropdown-default">
               <div class="max-h-48 overflow-y-auto scrollbar-thin">
-                <a class="flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-blue-100" href="#sepolia">
+                <a class="dropdown-item flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-blue-100" href="#sepolia">
                   Sepolia
                 </a>
-                <a class="flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#holesky">
+                <a class="dropdown-item flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#holesky">
                   Holesky
                 </a>
-                <a class="flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#">
+                <a class="dropdown-item flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#">
                   Solana 
                 </a>
-                <a class="flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#">
+                <a class="dropdown-item flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#">
                   Plume
                 </a>
-                <a class="flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#">
+                <a class="dropdown-item flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#">
                   Celo
                 </a>
-                <a class="flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#">
+                <a class="dropdown-item flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#">
                   Allora
                 </a>
-                <a class="flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#">
+                <a class="dropdown-item flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#">
                   Initia
                 </a>
-                <a class="flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#">
+                <a class="dropdown-item flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#">
                   Tabi
                 </a>
-                <a class="flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#">
+                <a class="dropdown-item flex items-center gap-x-3.5 py-2 px-3 text-sm text-gray-800 hover:bg-blue-100 focus:outline-none focus:bg-gray-100" href="#">
                   Berachain 
                 </a>
             </div>
