--- a/public/gastracker.html
+++ b/public/gastracker.html
@@ -82,8 +82,8 @@
   </div>
 
   <!-- Dekstop UI/UX -->
-  <div class="flex flex-col sm:flex-row h-screen">
-    <nav class="bg-gray-800 w-full sm:w-64 p-4 hidden sm:block overflow-y-auto">
+  <div class="layout flex flex-col sm:flex-row">  
+    <nav class=" bg-gray-800 w-full sm:w-64 p-4 hidden sm:block navbar-scroll">
       <div class="flex flex-col h-full">
         <div class="hidden sm:flex items-center justify-between mb-4">
           <h1 class="ml-4 text-2xl font-bold custom-underline">NDocs</h1>
@@ -152,7 +152,7 @@
 
 
     <!-- halaman utama -->
-    <main class=" xl:ml-10 flex-1 p-8 overflow-auto">
+    <main class="flex-1 p-8 main-content">
       <div class="mb-8">
         <h2 class="text-3xl font-bold">Ethereum ⛽ </h2>
       </div>
