--- a/public/airdroplist.html
+++ b/public/airdroplist.html
@@ -6,6 +6,7 @@
   <title>NDocs | Airdrop List</title>
   <link rel="shortcut icon" href="https://ugc.production.linktr.ee/9250b48c-ee52-4bdb-af03-b157be4e8c33_image.jpeg?io=true&size=avatar-v3_0" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/2ff8362c80.js" crossorigin="anonymous"></script>
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body class="bg-gray-900 text-white">
@@ -80,11 +81,12 @@
         <a href="fear-and-greed-index" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
       </li>
     </ul>
+</div>
 
-    <!-- Dekstop UI/UX -->
-  </div>
-  <div class="flex flex-col sm:flex-row h-screen">
-    <nav class="bg-gray-800 w-full sm:w-64 p-4 hidden sm:block overflow-y-auto">
+   <!-- Dekstop UI/UX -->
+
+  <div class="layout flex flex-col sm:flex-row">  
+    <nav class=" bg-gray-800 w-full sm:w-64 p-4 hidden sm:block navbar-scroll">
       <div class="flex flex-col h-full">
         <div class="hidden sm:flex items-center justify-between mb-4">
           <h1 class="ml-4 text-2xl font-bold custom-underline">NDocs</h1>
@@ -147,7 +149,7 @@
         </ul>
       </div>
     </nav>
-    <main class="xl:ml-10 flex-1 p-8 overflow-auto">
+    <main class="flex-1 p-8 main-content">
       <div class="mb-8 flex items-center">
         <h2 class="text-3xl font-bold mr-2">Airdrop List</h2>
         <div class="hs-dropdown relative inline-flex">
@@ -190,7 +192,10 @@
         </div>
     </div>
 
-
+    <button id="back-to-top" class="bg-blue-600 text-white rounded-full p-2  shadow-lg hover:bg-blue-700 focus:outline-none">
+      <i class="fas fa-chevron-up"></i>
+  </button>
+  
 
    
     <!-- content -->
@@ -235,9 +240,12 @@
               </ol>
             </p>
             </div>
+
+           
               
     </main>
   </div>
+  <script src="js/upbutton.js"></script>
   <script src="js/mobile-menu.js"></script>
   <script src="js/airdrop-dropdown.js"></script>
 </body>
