--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NDocs | Gas Tracker</title>
+  <title>NDocs | Contact</title>
   <link rel="shortcut icon" href="https://ugc.production.linktr.ee/9250b48c-ee52-4bdb-af03-b157be4e8c33_image.jpeg?io=true&size=avatar-v3_0" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="src/css/style.css" rel="stylesheet">
 </head>
 <body class="bg-gray-900 text-white">
   <!-- Mobile menu button -->
@@ -31,7 +31,7 @@
           <a href="./" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Intro</a>
         </li>
         <li class="mb-1">
-          <a href="contact" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700 ">Contact</a>
+          <a  class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700 ">Contact</a>
         </li>
         <li class="mb-1">
           <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
@@ -45,7 +45,7 @@
           <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">What Airdrop</a>
         </li>
         <li class="mb-1">
-          <a href="airdroplist" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Airdrop List</a>
+          <a href="./airdroplist" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Airdrop List</a>
         </li>
         <li class="mb-1">
           <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Results</a>
@@ -59,7 +59,7 @@
           <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Faucet</a>
         </li>
         <li class="mb-1">
-          <a href="faucet" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
+          <a href="./faucet" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
         </li>
         <li class="mb-1">
           <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">RPC</a>
@@ -73,10 +73,10 @@
           <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Gas Tracker</a>
         </li>
         <li class="mb-1">
-          <a  class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
+          <a href="./gastracker" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
         </li>
         <li class="mb-1">
-          <a href="fear-and-greed-index" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
+          <a href="./fear-and-greed-index" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
         </li>
       </ul>
   </div>
@@ -96,7 +96,7 @@
             <a href="./" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Intro</a>
           </li>
           <li class="mb-1">
-            <a href="contact" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700 ">Contact</a>
+            <a  class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700 ">Contact</a>
           </li>
           <li class="mb-1">
             <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
@@ -110,7 +110,7 @@
             <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">What Airdrop</a>
           </li>
           <li class="mb-1">
-            <a href="airdroplist" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Airdrop List</a>
+            <a href="./airdroplist" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Airdrop List</a>
           </li>
           <li class="mb-1">
             <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Results</a>
@@ -124,7 +124,7 @@
             <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Faucet</a>
           </li>
           <li class="mb-1">
-            <a href="faucet" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
+            <a href="./faucet" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
           </li>
           <li class="mb-1">
             <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">RPC</a>
@@ -138,70 +138,31 @@
             <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Gas Tracker</a>
           </li>
           <li class="mb-1">
-            <a  class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
+            <a href="./gastracker" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
           </li>
           <li class="mb-1">
-            <a href="fear-and-greed-index" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
+            <a href="./fear-and-greed-index" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
           </li>
         </ul>
       </div>
     </nav>
-
-
-
-
-
-    <!-- halaman utama -->
     <main class="flex-1 p-8 main-content">
       <div class="mb-8">
-        <h2 class="text-3xl font-bold">Ethereum ⛽ </h2>
+        <h2 class="text-3xl font-bold">Contact</h2>
       </div>
-      <h1 id="timer" class="text-center mt-10 text-blue-600"></h1>
-      <div class=" mb-40 mt-2 flex flex-col sm:flex-row justify-center items-center ">
-        <div class="max-w-xs rounded overflow-hidden shadow-lg mx-4 my-4 bg-white">
-          <img class="" src="img/gastracker/low.jpg" alt="" />
-          <div class="px-6 py-4">
-            <h1 class="font-bold text-xl mb-2 text-green-600 text-center">
-              Low
-            </h1>
-            <h1
-              id="safeGasPrice"
-              class="font-bold text-sm mb-2 text-black text-center"
-            ></h1>
-          </div>
-        </div>
-        <div class="max-w-xs rounded overflow-hidden shadow-lg mx-4 my-4 bg-white">
-            <img class="" src="img/gastracker/average.png" alt="" />
-            <div class="px-6 py-4">
-              <h1 class="font-bold text-xl mb-2 text-yellow-600 text-center">
-                Average
-              </h1>
-              <h1
-                id="proposeGasPrice"
-                class="font-bold text-sm mb-2 text-black text-center"
-              ></h1>
-            </div>
-          </div>
-        <div class="max-w-xs rounded overflow-hidden shadow-lg mx-4 my-4 bg-white">
-          <img class="" src="img/gastracker/high.png" alt="" />
-          <div class="px-6 py-4">
-            <h1 class="font-bold text-xl mb-2 text-red-600 text-center">
-              High
-            </h1>
-            <h1
-              id="fastGasPrice"
-              class="font-bold text-sm mb-2 text-black text-center"
-            ></h1>
-          </div>
-        </div>
+      <div class="mb-4">
+        <img src="https://i.gifer.com/2Y3b.gif" alt="" class="mb-4">
+        <p class="mb-4">Twitter: <a href="https://x.com/0xNekowawolf" target="_blank" class="text-blue-500 hover:underline">0xNekowawolf</a>
+        </p>
+        <p class="mb-4">Email: <a href="https://gmail.com/" target="_blank" class="text-blue-500 hover:underline">nekowawolf@gmail.com</a>
+        </p>
+        <p class="mb-4">Telegram: <a href="https://t.me/nekowawolf" target="_blank" class="text-blue-500 hover:underline">nekowawolf</a>
+        </p>
+        <p class="mb-4">Discord: <a href="https://discord.com/app" target="_blank" class="text-blue-500 hover:underline">nekowawolf#2003</a>
+        </p>
       </div>
-      <div class="mb-8">
-        <p class="mt-2 mb-4 max-w-3xl font-bold">What is Ethereum Gas Fees?</p>
-        <p class="mb-4 max-w-3xl">Gas refers to the fee required to successfully conduct a transaction on the Ethereum blockchain. Gas fees are paid in Ether (ETH) and denominated in Gwei</p>
-        <p class="mb-4 max-w-3xl">API form : <a href="https://docs.etherscan.io/" target="_blank" class="text-blue-500 hover:underline">https://docs.etherscan.io/</a></p>
-      </div>
-
-<script src="js/gastracker.js"></script>
-<script src="js/mobile-menu.js"></script>
+    </main>
+  </div>
+  <script src="src/js/mobile-menu.js"></script>
 </body>
 </html>
