--- a/fear-and-greed-index.html
+++ b/fear-and-greed-index.html
@@ -6,7 +6,7 @@
   <title>NDocs | FNG</title>
   <link rel="shortcut icon" href="https://ugc.production.linktr.ee/9250b48c-ee52-4bdb-af03-b157be4e8c33_image.jpeg?io=true&size=avatar-v3_0" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="src/css/style.css" rel="stylesheet">
 </head>
 <body class="bg-gray-900 text-white">
   <!-- Mobile menu button -->
@@ -31,7 +31,7 @@
         <a href="./" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Intro</a>
       </li>
       <li class="mb-1">
-        <a href="contact" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700 ">Contact</a>
+        <a href="./contact" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700 ">Contact</a>
       </li>
       <li class="mb-1">
         <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
@@ -45,7 +45,7 @@
         <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">What Airdrop</a>
       </li>
       <li class="mb-1">
-        <a href="airdroplist" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Airdrop List</a>
+        <a href="./airdroplist" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Airdrop List</a>
       </li>
       <li class="mb-1">
         <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Results</a>
@@ -59,7 +59,7 @@
         <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Faucet</a>
       </li>
       <li class="mb-1">
-        <a href="faucet" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
+        <a href="./faucet" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
       </li>
       <li class="mb-1">
         <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">RPC</a>
@@ -73,7 +73,7 @@
         <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Gas Tracker</a>
       </li>
       <li class="mb-1">
-        <a href="gastracker" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
+        <a href="./gastracker" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
       </li>
       <li class="mb-1">
         <a class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
@@ -96,7 +96,7 @@
             <a href="./" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Intro</a>
           </li>
           <li class="mb-1">
-            <a href="contact" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700 ">Contact</a>
+            <a href="./contact" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700 ">Contact</a>
           </li>
           <li class="mb-1">
             <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
@@ -110,7 +110,7 @@
             <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">What Airdrop</a>
           </li>
           <li class="mb-1">
-            <a href="airdroplist" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Airdrop List</a>
+            <a href="./airdroplist" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Airdrop List</a>
           </li>
           <li class="mb-1">
             <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Results</a>
@@ -124,7 +124,7 @@
             <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Faucet</a>
           </li>
           <li class="mb-1">
-            <a href="faucet" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
+            <a href="./faucet" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
           </li>
           <li class="mb-1">
             <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">RPC</a>
@@ -138,7 +138,7 @@
             <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Gas Tracker</a>
           </li>
           <li class="mb-1">
-            <a href="gastracker" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
+            <a href="./gastracker" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
           </li>
           <li class="mb-1">
             <a  class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
@@ -165,7 +165,7 @@
   </div>
 
 
-  <script src="js/fngindex.js"></script>
-  <script src="js/mobile-menu.js"></script>
+  <script src="src/js/fngindex.js"></script>
+  <script src="src/js/mobile-menu.js"></script>
 </body>
 </html>
