update: navbar menu

--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
 </head>
 <body class="bg-gray-900 text-white">
   <!-- Mobile menu button -->
-  <div class="sm:hidden bg-gray-800 w-full p-4 flex items-center justify-between">
+  <div class="sm:hidden bg-gray-800 w-full p-4 flex items-center justify-between">  
     <h1 class="text-2xl ml-4 font-bold custom-underline">NDocs</h1>
-    <button type="button" onclick="toggleMenu()" class="text-gray-400 hover:text-white hover:bg-gray-700 p-2 rounded-md focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white">
-      <span class="sr-only">Open main menu</span>
-      <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
-      </svg>
-      <svg class="hidden h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+    <button class="button" onclick="toggleMenu(); this.setAttribute('aria-expanded', this.classList.toggle('opened'))" aria-label="Main Menu">
+      <svg width="50" height="50" viewBox="0 0 100 100">
+        <path class="line line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
+        <path class="line line2" d="M 20,50 H 80" />
+        <path class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
       </svg>
     </button>
   </div>
@@ -146,6 +144,9 @@
         </ul>
       </div>
     </nav>
+
+    <!-- Main Content -->
+  <div class="xl:ml-10">
     <main class="flex-1 p-8 main-content">
       <div class="mb-8">
         <h2 class="text-3xl font-bold">Overview</h2>
@@ -157,6 +158,7 @@
         <p class="mb-4 max-w-3xl">プロジェクトXは完全にガスレスで、どのトークンもネットワーク料金の支払いに使用できる。私たちはまた、私たちのウォレットユーザーのためのすべてのトランザクションコストをカバーすることを可能にするカスタムペイマスターを設計し、すべてのdApp開発者に公開されています。</p>
       </div>
     </main>
+  </div>
   </div>
   <script src="src/js/mobile-menu.js"></script>
 </body>
