--- a/airdroplist.html
+++ b/airdroplist.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" href="https://ugc.production.linktr.ee/9250b48c-ee52-4bdb-af03-b157be4e8c33_image.jpeg?io=true&size=avatar-v3_0" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/2ff8362c80.js" crossorigin="anonymous"></script>
-  <link href="src/css/style.css" rel="stylesheet">
+  <link href="src/css/style.css?v=0.0.1" rel="stylesheet">
 </head>
 <body class="bg-gray-900 text-white">
 
